syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.poc.microservices.proto";
option java_outer_classname = "EmployerProto";

package employer;

message EmployeeListRequest {
  repeated int32 employeeIds = 1; // Accept multiple employee IDs
}

message EmployerJobInfo {
  int32 employerId = 1;
  repeated int32 jobIds = 2;
}

message EmployerJobInfoList {
  repeated EmployerJobInfo jobInfos = 1; // Return multiple EmployerJobInfo objects
}

service EmployerService {
  rpc GetEmployerJobInfo(EmployeeListRequest) returns (EmployerJobInfoList);
}